--- a/public/index.html
+++ b/public/index.html
@@ -127,41 +127,13 @@
     <!--/.about-us-->
     <!--about-us end -->
     <div class="container-fluid-banner">
-
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-
-            </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-
-                <div class="item active">
-                    <img id="img_slide1" class="img-responsive" src="assets/images/main-banner.jpg" alt="Los Angeles" style="width:100%; height: 345px;">
-
-                </div>
-
-                <div class="item">
-                    <img src="assets/images/Asset 3.jpg" alt="Chicago" style="width:100%;">
-
-                </div>
-
-
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img id="img_slide1" class="img-responsive" src="assets/images/main-banner.jpg" alt="Los Angeles" style="width:100%; height: 345px;">
             </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+    </div>
     </div>
     <section class="main-content">
         <div class="container">
@@ -181,16 +153,13 @@
                             <p> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
-
                     </div>
-
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
                             <p> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
-
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
@@ -198,8 +167,22 @@
                             <p> Now that the clients have entered India, it is paramount for them to be successful. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
-
                     </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading details">
+                            <h4>Sand printer</h4>
+                            <p> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
+                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                        </div>
+                    </div>
+                    <div class="panel panel-info">
+                        <div class="panel-heading details">
+                            <h4>Metal printer </h4>
+                            <p> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
+                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col-md-8">
                     <div class="row ex">
@@ -218,8 +201,22 @@
                         <div class="col-md-6">
                             <img src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
                         </div>
-
-
+                    </div>
+                    <div class="row ex">
+                        <div class="col-md-6">
+                            <img src="assets/images/PIC_PRD_SPE_65471c__SALL__AINO__V1.jpg" alt="" class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="assets/images/shutterstock_1398389936-1024x682.jpg" alt="" class="img-responsive" style="height: 240px;">
+                        </div>
+                    </div>
+                    <div class="row ex">
+                        <div class="col-md-6">
+                            <img src="assets/images/images.jpg" alt="" class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <img src="assets/images/What_is_CMYK_spot_image_high.jpg" alt="" class="img-responsive">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -277,7 +274,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2>link</h2>
+                            <h2 style="color:white">LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="home.html">HOME</a></p>
                                 <p><a href="#">ABOUT US</a> </p>
@@ -294,13 +291,9 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2>popular destination</h2>
+                            <h2 style="color:white"> ABOUT IUS </h2>
                             <div class="single-footer-txt">
-                                <p><a href="#">china</a></p>
-                                <p><a href="#">venezuela</a></p>
-                                <p><a href="#">brazil</a></p>
-                                <p><a href="#">australia</a></p>
-                                <p><a href="#">london</a></p>
+                                <p>Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
@@ -310,12 +303,14 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item text-center">
-                            <h2 class="text-left">contacts</h2>
+                            <h2 class="text-left" style="color:white">contacts</h2>
                             <div class="single-footer-txt text-left">
-                                <p>+1 (300) 1234 6543</p>
-                                <p class="foot-email"><a href="#">info@tnest.com</a></p>
-                                <p>North Warnner Park 336/A</p>
-                                <p>Newyork, USA</p>
+                                <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
+                                <p><strong>Mob.:</strong>0091-9811141647</p>
+                                <p class="foot-email"><a href="#"> sanjay.gupta@globalaxis.in</a></p>
+                                <p>B-XI/8242</p>
+                                <p>Vasant Kunj New Delhi – 110070</p>
+                                <p>INDIA</p>
                             </div>
                             <!--/.single-footer-txt-->
                         </div>
@@ -334,8 +329,9 @@
                     <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p>&copy; 2020 <a href="https://www.globalaxis.com">GlobalAxis</a>. All Right Reserved</p>
+                <p style="color:white">&copy; 2020 <a style="color:white" href="https://www.globalaxis.com">GlobalAxis</a>. All Right Reserved</p>
 
             </div>
             <!--/.foot-icons-->
