--- a/public/index.html
+++ b/public/index.html
@@ -207,15 +207,15 @@
                             <img src="assets/images/PIC_PRD_SPE_65471c__SALL__AINO__V1.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/shutterstock_1398389936-1024x682.jpg" alt="" class="img-responsive" style="height: 240px;">
+                            <img src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
                         </div>
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
-                            <img src="assets/images/images.jpg" alt="" class="img-responsive">
+                            <img src="assets/images/hero-ind-chm-petrochm-plant-005.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/What_is_CMYK_spot_image_high.jpg" alt="" class="img-responsive">
+                            <img src="assets/images/852058-industries-istock-072519.jpg" alt="" class="img-responsive">
                         </div>
                     </div>
                 </div>
