--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                         <div class="logo">
                             <a href="index.html">
                                 <!-- tour<span>Nest</span> -->
-                                <img class="img-responsive grow" src="assets/images/logo.jpg" />
+                                <img class="img-responsive grow" src="assets/images/logo.png" />
                             </a>
                         </div>
                         <!-- /.logo-->
@@ -256,7 +256,7 @@
                         <div class="single-footer-item">
                             <div class="footer-logo">
                                 <a href="index.html">
-                                    <img class="img-responsive grow" src="assets/images/logo.jpg" />
+                                    <img class="img-responsive grow" src="assets/images/logo.png" />
                                 </a>
 
                             </div>
