--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
                             <div class="overlay">Ac</div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
+                            <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
                             <div class="overlay">Principal</div>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                             <div class="overlay">Teacher</div>
                         </div>
                         <div class="col-md-6">
-                            <img src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
+                            <img class="change_height" src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
                             <div class="overlay">Student</div>
                         </div>
                     </div>
