--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img id="img_slide1" class="img-responsive" src="assets/images/final exone.jpg" alt="Los Angeles" style="width:100%; height: 345px;">
+                <img id="img_slide1" class="img-responsive" src="assets/images/final exone.jpg" alt="Los Angeles" style="width:100%; ">
             </div>
         </div>
     </div>
@@ -182,32 +182,32 @@
                     <div class="row ex">
                         <div class="col-md-6">
                             <img src="assets/images/3Ex.jpeg" alt="" class="img-responsive">
-                            <div class="overlay">Doctor</div>
+                            <div class="overlay">AUTOMATIVE</div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/2Ex.jpeg" alt="" style="width:100%">
-                            <div class="overlay">Nurse</div>
+                            <div class="overlay"> HEALTHCARE</div>
                         </div>
 
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
                             <img src="assets/images/4Ex.jpg" alt="" class="img-responsive">
-                            <div class="overlay">Ac</div>
+                            <div class="overlay">INDUSTRIAL</div>
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">Principal</div>
+                            <div class="overlay">METAL PRINTING</div>
                         </div>
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
                             <img src="assets/images/PIC_PRD_SPE_65471c__SALL__AINO__V1.jpg" alt="" class="img-responsive">
-                            <div class="overlay">Teacher</div>
+                            <div class="overlay">SAND PRINTING</div>
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">Student</div>
+                            <div class="overlay">3D PRINTING</div>
                         </div>
                     </div>
 
@@ -229,6 +229,7 @@
                             <div class="panel-heading">Case Study 1</div>
                             <div class="panel-body">
                                 One of the Europe’s largest timing chain systems producers for auto OEMs, Germany won a project in India from the world’s top car manufacturer and was faced with delivering the project to the customer. Global Axis provided complete support for:
+                                <br>
                                 <button type="button" class="btn btn-primary btn-sm">Read more</button>
 
                             </div>
@@ -237,6 +238,7 @@
                             <div class="panel-heading">Case Study 2</div>
                             <div class="panel-body">
                                 One of Europe’s leading producers of cylinder heads, core boxes wanted to reduce costs of procurement for foundry tooling and capital equipment. All services provided by us for:
+                                <br>
                                 <button type="button" class="btn btn-primary btn-sm">Read more</button>
 
                             </div>
