--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         <div class="header-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 col-xs-10 ">
                         <div class="logo">
                             <a href="index.html">
                                 <!-- tour<span>Nest</span> -->
@@ -94,11 +94,11 @@
                             <!-- /.navbar-header-->
                             <div class="collapse navbar-collapse">
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li class="smooth-menu"><a href="home.html">HOME</a></li>
-                                    <li class="smooth-menu"><a href="#">ABOUT US</a></li>
+                                    <li class="smooth-menu"><a href="index.html">HOME</a></li>
+                                    <li class="smooth-menu"><a href="aboutus.html">ABOUT US</a></li>
                                     <li class="smooth-menu"><a href="#">SERVICES </a></li>
-                                    <li class="smooth-menu"><a href="#">CASE STUDIES </a></li>
-                                    <li class="smooth-menu"><a href="#">CONTACT US</a></li>
+                                    <li class="smooth-menu"><a href=".case_study">CASE STUDIES </a></li>
+                                    <li class="smooth-menu"><a href=".footer-copyright">CONTACT US</a></li>
 
                                     <!--/.project-btn-->
                                 </ul>
@@ -216,11 +216,10 @@
         </div>
     </section>
 
-    <section class="main-content">
+    <section class="main-content case_study">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
                             <h4>Case Studies</h2>
@@ -274,8 +273,8 @@
                         <div class="single-footer-item">
                             <h2 style="color:white">LINK</h2>
                             <div class="single-footer-txt">
-                                <p><a href="home.html">HOME</a></p>
-                                <p><a href="#">ABOUT US</a> </p>
+                                <p><a href="index.html">HOME</a></p>
+                                <p><a href="aboutus.html">ABOUT US</a> </p>
                                 <p><a href="#"> SERVICES</a></p>
                                 <p><a href="#"> CASE STUDIES</a></p>
                                 <p><a href="#">CONTACT US</a></p>
