--- a/public/index.html
+++ b/public/index.html
@@ -197,17 +197,17 @@
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">METAL PRINTING</div>
+                            <div class="overlay">3D PRINTING</div>
                         </div>
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
                             <img src="assets/images/PIC_PRD_SPE_65471c__SALL__AINO__V1.jpg" alt="" class="img-responsive">
-                            <div class="overlay">SAND PRINTING</div>
+                            <div class="overlay">ELECTRONICS INDUSTRY</div>
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">3D PRINTING</div>
+                            <div class="overlay">MANUFATURING UNIT</div>
                         </div>
                     </div>
 
