--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -147,35 +147,35 @@
                             <h4>Global Axis </h2>
                         </div>
 
-                        <p style="margin-top: 20px; " class='text_aboutus'>
+                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
                             Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India. We have extensive experience in advising companies with
                             our on-the-ground market studies, highly focused vendor and partner search and post-entry advisory services. We follow a tailored approach to provide solutions to our clients.
 
                         </p>
 
-                        <p>
+                        <p style=" text-align: justify;">
                             Our broad portfolio of services comprise of :-
                         </p>
-                        <ul class="a" style="margin-left: 10px;">
+                        <ul class="a " style="margin-left: 10px;text-align: justify ">
                             <li><a href="# ">India Entry Strategy</a></li>
                             <li><a href="# ">Sourcing from India</a></li>
                             <li><a href="# ">Post Entry Services</a> </li>
                         </ul>
                         <img src="assets/images/image-2.png ">
-                        <p class='text_aboutus'>
+                        <p class='text_aboutus' style="text-align: justify;">
                             Currently we work with the top European companies in their India entry strategies across the three sectors that we are present in: namely a) Automotive b) Industrial c) Health care and personal hygiene
                         </p>
 
-                        <p class='text_aboutus'>
+                        <p class='text_aboutus' style="text-align: justify;">
                             For those clients with already existing Indian operations, we provide consulting and services so as to increase their profitability and improve performance. We, at Global Axis strive hard to fulfill our commitments to ensure client satisfaction and thus
                             acknowledged highly for maintaining standards in quality & timely execution of assignments.
                         </p>
 
 
-                        <div class="panel-heading-Studies" style="margin-bottom: 15px;">
+                        <div class="panel-heading-Studies " style="margin-bottom: 15px;text-align: justify ">
                             <h4>Our Team </h2>
                         </div>
-                        <ul class="a" style="margin-left: 10px;">
+                        <ul class="a " style="margin-left: 10px; text-align: justify">
                             <li>Global Axis is driven by a group of highly qualified and motivated individuals who have an Indian insight and a deep understanding of the business practices and options in India.</li>
                             <li>Our associates are from diverse fields like automotive, industrial, dermatology and healthcare, who are well-versed in these sectors.</li>
                             <li> Team focuses not only on business realization but also on building trust & long-term relationships with the clients. </li>
