--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
                         </div>
                         <div class="col-md-6">
                             <img class="change_height" src="assets/images/download.jpg" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">MANUFATURING UNIT</div>
+                            <div class="overlay">MANUFATURING INDUSTRY</div>
                         </div>
                     </div>
 
