--- a/public/index.html
+++ b/public/index.html
@@ -182,7 +182,7 @@
                     <div class="row ex">
                         <div class="col-md-6">
                             <img src="assets/images/3Ex.jpeg" alt="" class="img-responsive">
-                            <div class="overlay">AUTOMATIVE</div>
+                            <div class="overlay">AUTOMOTIVE</div>
                         </div>
                         <div class="col-md-6">
                             <img src="assets/images/2Ex.jpeg" alt="" style="width:100%">
