--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -140,7 +140,7 @@
     <section class="main-content">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-6">
 
                     <div class="panel panel-default" style="padding: 20px;">
                         <div class="panel-heading-Studies">
@@ -183,6 +183,71 @@
 
                     </div>
                 </div>
+
+                <div class="col-md-6">
+
+                    <div class="panel panel-default about_us" style="padding: 20px;">
+                        <div class="panel-heading-Studies">
+                            <h4>ExOne – Global Axis </h2>
+                        </div>
+
+                        <p style="margin-top: 20px;text-align: justify; " class='text_aboutus'>
+                            Global Axis is a business partner of trust for ExOne in India since 2012 and we have been at the forefront of bringing binder jet printing technologies from ExOne.
+                        </p>
+
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Global Axis strongly believes in the 3S of sales, service and spares as we promote ExOne AM technology in the Indian market. We have a ExOne dedicated competent team trained in Germany located in India for sales and service activities.
+
+                        </p>
+                        <p style=" text-align: justify;  margin-bottom: 5px;">
+                            ExOne is a global leader in binder jet 3D printing for the last 20 years. It began as a 3D division of Extrude Hone and today has global operations in US, EU and Asia and has more than 245 patents.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            ExOne has a leadership position in Industrial grade binder jet systems for sand, metal, ceramics and composites.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            ExOne technology has been highly effective in making of sand cores, molds, metal 3D printed parts, ceramic 3D printing and 3D printed tooling solutions.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            The industrial markets for 3D printing are:
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Foundries, Automotive, Aerospace, Pumps, Agricultural, Defense, Medical, Architectural, Energy.
+
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            We are characterized by a 17% YOY growth transitioning from R+D and prototyping to production using the 3Dprinting technology. .
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            Sand printing: we make the complex sand cores and molds in matter of days rather than months.
+
+                        </p>
+                        <p>
+                            Metal printing we make custor or mass production of complex single alloy metal parts in hours versus weeks and months.
+                        </p style=" text-align: justify;  margin-bottom: 5px;">
+                        <p>
+                            Ceramic printing, we make complex ceramic parts using silicon carbide.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            We are also in the 3D printed tooling solutions for complex, sacrificial, vacuum and hydro-forming parts.
+                        </p>
+                        <p style=" text-align: justify; margin-bottom: 5px;">
+                            For more information, please see our website:
+                            <a href="#">www.exone.com</a>
+
+
+                        </p>
+
+
+
+
+
+
+                    </div>
+                </div>
+
 
 
             </div>
