--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Company profile</h4>
-                            <p>Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
+                            <p style=" text-align: justify;">Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
 
@@ -150,28 +150,28 @@
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>India entry strategy</h4>
-                            <p> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
+                            <p style=" text-align: justify;"> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
-                            <p> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
+                            <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Post entry services</h4>
-                            <p> Now that the clients have entered India, it is paramount for them to be successful. </p>
+                            <p style=" text-align: justify;"> Now that the clients have entered India, it is paramount for them to be successful. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>3D printing</h4>
-                            <p> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
+                            <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
                             <button type="button" class="btn btn-primary btn-sm">Read more</button>
                         </div>
                     </div>
